# makepad

./: Cargo.toml
draw/src/: font_atlas.rs  turtle.rs
examples/chatgpt/: Cargo.toml
examples/font/: Cargo.toml
examples/font/src/: app.rs  main.rs
examples/portlist/: Cargo.toml
examples/portlist/src/: app.rs  main.rs
examples/sdxl/src/: app.rs
examples/simple/: Cargo.toml
examples/simple/src/: app.rs
platform/: Cargo.toml
platform/src/: app_main.rs  cx.rs  log.rs
platform/src/os/: cx_native.rs
platform/src/os/apple/ios/: ios_app.rs
platform/src/os/linux/: egl_sys.rs
platform/src/os/linux/android/: android.rs
platform/src/os/linux/open_harmony/: arkts_obj_ref.rs  mod.rs  oh_callbacks.rs  oh_event.rs  oh_napi.rs  oh_sys.rs  oh_timer.rs  oh_util.rs  open_harmony.rs  raw_file.rs  uv_sys.rs
tools/cargo_makepad/src/: main.rs
tools/cargo_makepad/src/open_harmony/: compile.rs  mod.rs
tools/open_harmony/: README.md
tools/open_harmony/deveco/AppScope/: app.json5
tools/open_harmony/deveco/entry/libs/arm64-v8a/: .gitkeep
tools/open_harmony/deveco/entry/src/main/cpp/: CMakeLists.txt
tools/open_harmony/deveco/entry/src/main/ets/entryability/: EntryAbility.ets
widgets/src/: portal_list.rs
