[package]
name = "makepad-example-portlist"
version = "0.6.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad portlist example"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "zqpv-Yj-K7WNVK2I8h5Okhho46Q="

[dependencies]
makepad-widgets = { path = "../../widgets", version = "0.6.0" }
